# ipl-prediction

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  IPL_Prediction_Colab_Training.ipynb  README.md  predict_cli.py  process_docs.py  pyproject.toml  render.yaml  requirements.txt  streamlit_app.py  web_app.py
alembic/: env.py
colab_training/: IPL_GPU_Training_Complete.ipynb  feature_engine.py  model_zoo.py  tournament.py
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  Chapter Format (1).docx  DATA_SUMMARY.md  FINAL_PROJECT_SUMMARY.md  FINAL_REPORT_CHAPTER_1_TO_7.docx  FINAL_SUBMISSION_IPL_PROJECT_REPORT.docx  FINAL_SUBMISSION_IPL_PROJECT_REPORT_BACKUP.docx  FINAL_SUBMISSION_IPL_PROJECT_REPORT_RESTRUCTURED.docx  Final Project sample (1).docx  GITHUB_PROFILE_UPDATE.md  IEEE_PAPER.tex  IPL_Originality_Report.docx  IPL_Originality_Report_Exact.docx  IPL_Originality_Report_Para.docx  IPL_Prediction_Project_Report_Refined.docx  IPL_Project_Report_Full.docx  Internal Project Evalution Sheet (1).docx  List of chapters (1).docx  PROJECT_ORGANIZATION.md  project_map.html
ipl_predictor/: __init__.py  auth.py  calibration.py  common.py  config.py  db.py  ensembles.py  live_data.py  model_storage.py  models.py  monitoring.py  online_learning.py  project_map.py  schemas.py  torch_tabular.py
models/: all_models_report.json  best_model_search_report.json  best_score_test_predictions.csv  best_win_test_predictions.csv  canonical_pipeline_report.json  cpu_model_report.json  deployment_report.json  feature_reference_profile.json  model_registry.json  pre_match_model_report.json  score_model.pkl  (+11 more)
(+91 files in other folders)
