[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ipl-predictor"
version = "0.1.0"
description = "IPL score and win-probability predictor built from Cricsheet ball-by-ball data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2,<3",
  "scikit-learn>=1.7,<1.8",
  "joblib>=1.4,<2",
  "Flask>=3.1,<4",
  "streamlit>=1.44,<2",
  "xgboost>=2.1,<3",
  "catboost>=1.2,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9",
]

[tool.setuptools]
packages = ["ipl_predictor"]
